<resources>
    <string name="app_name">Duelo de Leyendas</string>
    <string name="title_personaje_detail">Personaje Detail</string>
    <string name="title_Login">DUELO DE LEYENDAS</string>
    <string name="Login_username">Username:</string>
    <string name="Login_password">Password:</string>
    <string name="Login_Button">Join</string>
    <string name="General_Welcome">Bienvenido!</string>
    <string name="General_Duelo">Duelo</string>
    <string name="General_Character">Personaje</string>
    <string name="General_Search">Buscar</string>
    <string name="General_Estadistica">Estadisticas</string>
    <string name="NombreDelPersonaje">Nombre:</string>
    <string name="especialidades">Especialidades</string>
    <string name="debilidades">Debilidades</string>
    <string name="pos_ideal">Posicion Ideal</string>
    <string name="titulo_estadistica">Estadisticas</string>
    <string name="estadistica_jugadas">Jugadas:</string>
    <string name="estadistica_ganadas">Ganadas:</string>
    <string name="estadistica_kills">Kills:</string>
    <string name="estadistica_deaths">Deaths:</string>
    <string name="estadistica_assists">Assists:</string>
    <string name="estadistica_mejor_ubicacion">Mejor Ubicacion:</string>
    <string name="estadistica_puntaje">Puntaje:</string>
</resources>
