<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fcfcfc">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/personaje_detail"
        style="?android:attr/textAppearanceLarge" android:layout_width="wrap_content"
        android:layout_height="130dp" android:padding="16dp" android:textIsSelectable="true"
        tools:context=".PersonajeDetailFragment"
        android:background="#fcf6f6"
        android:text="@string/title_Login" android:textSize="40dp" android:textColor="#666666"/>

    <EditText
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:id = "@+id/InputUsername"
        android:inputType="text"
        android:hint="@string/Login_username"
        android:enabled="false"
        android:background="#f4f4f4"
        android:visibility="visible" />
    <EditText
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:id = "@+id/InputPassword"
        android:inputType="textPassword"
        android:hint="@string/Login_password"
        android:enabled="false"
        android:background="#f4f1f1" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/LoginButton"
        android:background="#325194"
        android:text="@string/Login_Button"/>
    
</LinearLayout>