<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/personaje_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context=".PersonajeDetailFragment"
        android:background="@drawable/blue_gradient_without_radius"
        android:text="@string/title_Login"
        android:textSize="40sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_usuario"
        android:layout_weight="0.08"
        android:inputType="text"
        android:hint="@string/Login_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/id_contraseña"
        android:hint="@string/Login_password"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/Login_Button"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="50sp"
            android:shadowRadius="3"
            android:background="@drawable/blue_button"
            android:id="@+id/id_ingresar_button"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>