<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/personaje_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context=".PersonajeDetailFragment"
        android:background="#fcf6f6"
        android:text="@string/title_Login"
        android:textSize="40dp"
        android:textColor="#666666"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_usuario"
        android:layout_weight="0.08"
        android:inputType="text"
        android:hint="@string/Login_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/id_contraseña"
        android:hint="@string/Login_password"/>

    <Button
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:text="Ingresar"
        android:id="@+id/id_ingresar_button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        />

</LinearLayout>