<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout android:id="@+id/app_bar"
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/General_Duelo"
            android:textSize="40sp"
            android:textColor="#ffffE2"
            android:textAlignment="center"/>


    </android.support.design.widget.AppBarLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_weight="0.08"
        android:weightSum="4">
        <EditText
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:inputType="text"
            android:hint="@string/General_Character"
            android:textSize="25sp"
            android:textColor="#ffffE2"
            android:padding="5dp"
            android:id="@+id/personajeAFiltrar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:id="@+id/LoginButton"
            android:background="#325194"
            android:text="@string/General_Search"/>

    </LinearLayout>




</LinearLayout>